smaller charts + added to decklist

--- a/src/AppBundle/Resources/views/Decklist/decklist.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/decklist.html.twig
@@ -31,6 +31,7 @@
 		<div class="col-md-6">
 			<div id="deck-content" style="margin-bottom:10px"></div>
 			{% include 'AppBundle:Default:google_adaptable_ad.html.twig' %}
+			{% include 'AppBundle:Builder:deck-charts.html.twig' %}
 			{% include 'AppBundle:Builder:draw-simulator.html.twig' %}
 			{% include 'AppBundle:Decklist:table-predecessor.html.twig' %}
 			{% include 'AppBundle:Decklist:table-successor.html.twig' %}
