--- a/src/AppBundle/Resources/views/Builder/deck-charts.html.twig
+++ b/src/AppBundle/Resources/views/Builder/deck-charts.html.twig
@@ -1,4 +1,16 @@
-<div id="deck-chart-faction" style="width:100%;height:300px"></div>
-<div id="deck-chart-icon" style="width:100%;height:300px"></div>
-<div id="deck-chart-strength" style="width:100%;height:300px"></div>
-<div id="deck-chart-cost" style="width:100%;height:300px"></div>
+<div class="row">
+	<div class="col-sm-6">
+		<div id="deck-chart-faction" style="width:100%;height:250px"></div>
+	</div>
+	<div class="col-sm-6">
+		<div id="deck-chart-icon" style="width:100%;height:250px"></div>
+	</div>
+</div>
+<div class="row">
+	<div class="col-sm-6">
+		<div id="deck-chart-strength" style="width:100%;height:250px"></div>
+	</div>
+	<div class="col-sm-6">
+		<div id="deck-chart-cost" style="width:100%;height:250px"></div>
+	</div>
+</div>
