message when data updated

--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -8,7 +8,7 @@
 <div class="site-slogan">Deckbuilder for A Game of Thrones LCG 2nd Edition</div>
 </div> <!-- .container -->
 
-<div class="main white container" style="background-color:transparent">
+<div class="main container">
     <div class="row">
     {% for data in decklists_by_faction %}
     <div class="col-md-6" style="margin-bottom:30px">
