export in plain text format

--- a/src/AppBundle/Resources/views/Decklist/toolbar.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/toolbar.html.twig
@@ -12,7 +12,7 @@
 		<span class="fa fa-download"></span> <span class="hidden-xs">Download</span> <span class="caret"></span>
 	</button>
 	<ul class="dropdown-menu" role="menu">
-{#		<li><a href="#" id="btn-download-text">Text file</a></li>#}
+		<li><a href="#" id="btn-download-text">Text file</a></li>
 		<li><a href="#" id="btn-download-octgn">Octgn file</a></li>
 	</ul>
 </div>
