--- a/src/AppBundle/Resources/views/Search/card-props.html.twig
+++ b/src/AppBundle/Resources/views/Search/card-props.html.twig
@@ -14,6 +14,6 @@
 	Initiative: {{ macros.integer_or_x(card.initiative) }}.
 	Claim: {{ macros.integer_or_x(card.claim) }}.
 	Reserve: {{ macros.integer_or_x(card.reserve) }}.
-	Plot deck limit: {{ macros.integer_or_x(card.plot_limit) }}.
+	Plot deck limit: {{ macros.integer_or_x(card.deck_limit) }}.
 {% endif %}
 </span>
