--- a/src/AppBundle/Resources/views/Builder/decks.html.twig
+++ b/src/AppBundle/Resources/views/Builder/decks.html.twig
@@ -80,7 +80,7 @@
 		<td>
 			<a href="{{ path('deck_view',{deck_id:deck.id}) }}" class="deck-name">{{ deck.name }}</a>
 			{% if deck.problem is not null %}
-			<div class="text-danger small"><span class="fa fa-exclamation-triangle"></span> {{ deck.problem_label }}</div>
+			<div class="text-danger small"><span class="fa fa-exclamation-triangle"></span> {{ deck_validation_helper.getProblemLabel(deck.problem) }}</div>
 			{% endif %}
 			<div class="tags">
 			{% for tag in deck.tags|split(' ') %}
