--- a/src/AppBundle/Resources/views/Builder/tab-pane-history.html.twig
+++ b/src/AppBundle/Resources/views/Builder/tab-pane-history.html.twig
@@ -22,17 +22,12 @@
 <!-- Published decklists Table -->
 <table class="table table-condensed" id="table-predecessor">
 	<thead>
-		<tr><th colspan="{% if published_decklists|length %}4{% else %}1{% endif %}"><span class="fa fa-share"></span> Published versions</th></tr>
+		<tr><th colspan="{% if deck.children|length %}4{% else %}1{% endif %}"><span class="fa fa-share"></span> Published versions</th></tr>
 	</thead>
 	<tbody>
-	{% if published_decklists|length %}
-	{% for decklist in published_decklists %}
-		<tr>
-			<td class="decklist-name"><a href="{{ path('decklist_detail', { 'decklist_id': decklist.id, 'decklist_name': decklist.name_canonical|e('url') }) }}">{{ decklist.name }}</a></td>
-			<td class="social"><span class="fa fa-heart social-icon-like"></span> {{ decklist.nb_votes }}</td>
-			<td class="social"><span class="fa fa-star social-icon-favorite"></span> {{ decklist.nb_favorites }}</td>
-			<td class="social"><span class="fa fa-comment social-icon-comment"></span> {{ decklist.nb_comments }}</td>
-		</tr>
+	{% if deck.children|length %}
+	{% for decklist in deck.children %}
+	{% include 'AppBundle:Default:decklist-table-row.html.twig' %}
 	{% endfor %}
 	{% else %}
 		<tr><td>None.</td></tr>
