--- a/src/AppBundle/Resources/views/Builder/deckview.html.twig
+++ b/src/AppBundle/Resources/views/Builder/deckview.html.twig
@@ -5,7 +5,7 @@
 	<script src="{{ asset_url }}"></script>
 	{% endjavascripts %}
 	<script type="text/javascript">
-	app.deck.json = {{ deck|json_encode|raw }};
+	app.deck.json = {{ arrayexport|json_encode|raw }};
 	</script>
 {% endblock %}
 
@@ -16,7 +16,7 @@
 	    <div class="col-md-12">
 	        <h1 style="border-bottom:1px solid lightgray">{{ deck.name }}</h1>
 	        {% if deck.problem %}
-	        <div class="alert alert-danger" role="alert">{{ deck.problem_label }}</div>
+	        <div class="alert alert-danger" role="alert">{{ deck_validation_helper.problemLabel(deck.problem) }}</div>
 	        {% endif %}
 	    </div>
 	</div>
@@ -93,14 +93,9 @@
 					<tr><th colspan="4"><span class="fa fa-share"></span> Published versions</th></tr>
 				</thead>
 				<tbody>
-				{% if published_decklists|length %}
-				{% for decklist in published_decklists %}
-					<tr>
-						<td class="decklist-name"><a href="{{ path('decklist_detail', { 'decklist_id': decklist.id, 'decklist_name': decklist.name_canonical|e('url') }) }}">{{ decklist.name }}</a></td>
-						<td class="social"><span class="fa fa-heart social-icon-like"></span> {{ decklist.nb_votes }}</td>
-						<td class="social"><span class="fa fa-star social-icon-favorite"></span> {{ decklist.nb_favorites }}</td>
-						<td class="social"><span class="fa fa-comment social-icon-comment"></span> {{ decklist.nb_comments }}</td>
-					</tr>
+				{% if deck.children|length %}
+				{% for decklist in deck.children %}
+				{% include 'AppBundle:Default:decklist-table-row.html.twig' %}
 				{% endfor %}
 				{% else %}
 					<tr><td>None.</td></tr>
