--- a/src/AppBundle/Resources/views/Builder/tab-pane-infos.html.twig
+++ b/src/AppBundle/Resources/views/Builder/tab-pane-infos.html.twig
@@ -9,7 +9,7 @@
 		</div>
 		<div class="form-group">
 			<label for="description_">Notes</label>
-			<textarea class="form-control" rows="20" name="description_" id="description" placeholder="Type # to enter a card name. Type $ to enter a symbol.">{{ deck.description_md }}</textarea>
+			<textarea class="form-control" rows="20" name="description_" id="description" placeholder="Type # to enter a card name. Type $ to enter a symbol.">{{ deck.descriptionMd }}</textarea>
 		</div>
 		<div class="well text-muted" id="description-preview"><small>Preview. Look <a href="http://daringfireball.net/projects/markdown/dingus">here</a> for a Markdown syntax reference.</small></div>
 	</div><!-- /.col-sm-12 -->
