--- a/src/AppBundle/Resources/views/Decklist/author-and-description.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/author-and-description.html.twig
@@ -1,6 +1,6 @@
 <h3 class="username">
-    <a href="{{ path('user_profile_public', {user_id:decklist.user_id,user_name:decklist.username|e('url')}) }}" class="{{ decklist.usercolor }}">{{ decklist.username }}</a>
-    {% if decklist.donation > 0 %}<span class="fa fa-gift donator" title="ThronesDB Gracious Donator"></span>{% endif %}
-    <small title="User Reputation">{{ decklist.reputation }}</small>
+    <a href="{{ path('user_profile_public', {user_id:decklist.user.id,user_name:decklist.user.username|e('url')}) }}" class="{{ decklist.user.color }}">{{ decklist.user.username }}</a>
+    {% if decklist.user.donation > 0 %}<span class="fa fa-gift donator" title="ThronesDB Gracious Donator"></span>{% endif %}
+    <small title="User Reputation">{{ decklist.user.reputation }}</small>
 </h3>
-<div id="deck-description">{{ decklist.description_html|raw }}</div>
+<div id="deck-description">{{ decklist.descriptionHtml|raw }}</div>
