--- a/src/AppBundle/Resources/views/Decklist/edit-modal.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/edit-modal.html.twig
@@ -17,18 +17,18 @@
 							</div>
 							<div class="form-group">
 								<label for="edit-decklist-derived">Derived from</label>
-								<input type="text" class="form-control" name="derived" id="edit-decklist-derived" maxlength="80" value="{% if precedent_decklists|length %}{{ precedent_decklists[0].id }}{% endif %}" placeholder="Enter the id or url of a decklist">
+								<input type="text" class="form-control" name="derived" id="edit-decklist-derived" maxlength="80" value="{% if decklist.precedent %}{{ decklist.precedent.id }}{% endif %}" placeholder="Enter the id or url of a decklist">
 							</div>
 							<div class="form-group">
 								<label for="edit-decklist-description">Description</label>
-								<textarea class="form-control" name="description" id="edit-decklist-description" rows="5" placeholder="Enter a brief explanation of the deck strategy and your significant choices">{{ decklist.description_md }}</textarea>
+								<textarea class="form-control" name="description" id="edit-decklist-description" rows="5" placeholder="Enter a brief explanation of the deck strategy and your significant choices">{{ decklist.descriptionMd }}</textarea>
 							</div>
 							<div class="form-group">
 								<label for="edit-decklist-tournament">Placed high in a tournament</label>
 								<select class="form-control" name="tournament" id="edit-decklist-tournament">
 								<option value="">No</option>
 								{% for tournament in tournaments %}
-								<option value="{{ tournament.id }}"{% if tournament.id == decklist.tournament_id %} selected{% endif %}>{{ tournament.description }}</option>
+								<option value="{{ tournament.id }}"{% if tournament.id == decklist.tournament.id %} selected{% endif %}>{{ tournament.description }}</option>
 								{% endfor %}
 								</select>
 							</div>
