--- a/src/AppBundle/Resources/views/Builder/deckedit.html.twig
+++ b/src/AppBundle/Resources/views/Builder/deckedit.html.twig
@@ -1,4 +1,5 @@
 {% extends 'AppBundle::layout.html.twig' %}
+{% import "AppBundle::macros.html.twig" as macros %}
 
 {% block javascripts %}
 	{% javascripts '@AppBundle/Resources/public/js/ui.deckedit.js' %}
