--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -98,7 +98,11 @@
     </ul>
 
     <p>
-    Designed and built by <a href="//twitter.com/alsciende">@alsciende</a>
+    Designed and built by Alsciende. 
+    Contact: 
+    <a href="https://twitter.com/alsciende" title="Twitter"><span class="fa fa-twitter"></span></a>
+    <a href="https://reddit.com/user/Alsciende/" title="Reddit"><span class="fa fa-reddit"></span></a>
+    <a href="mailto:alsciende@icloud.com" title="E-mail"><span class="fa fa-envelope"></span></a>
     </p>
 
     <p>
@@ -106,7 +110,7 @@
     </p>
 
     <p>
-    You may contribute by giving money on <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=4EFH86M88SQAC">Paypal (€)</a> or <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=FXEPSXHMWBU9Q">Paypal ($)</a> or directly to <i>alsciende</i> (at) <i>icloud.com</i>.
+    You may contribute by giving money on <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=4EFH86M88SQAC">Paypal (€)</a> or <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=FXEPSXHMWBU9Q">Paypal ($)</a>.
     </p>
 
     <p>
