displaying decklist version with minor

--- a/src/AppBundle/Resources/views/Decklist/decklist.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/decklist.html.twig
@@ -18,7 +18,7 @@
 		<div class="col-xs-12">
 			<h1 class="decklist-name text-center">
 				<span class="icon icon-{{ decklist.faction.code }}"></span>
-				{{ decklist.name }} v{{ decklist.version }}
+				{{ decklist.name }} {{ decklist.version }}
 			</h1>
 		</div>
 		<div class="col-xs-12">
