--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -13,7 +13,9 @@
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/qtip2/2.1.1/jquery.qtip.css">
     {% stylesheets filter="cssrewrite,scssphp" output="css/app.css"
-    	'bundles/app/css/*'
+    	'bundles/app/css/bootstrap.css'
+    	'bundles/app/css/style.css'
+    	'bundles/app/css/icons.css'
     %}
     <link rel="stylesheet" href="{{ asset_url }}" />
 	{% endstylesheets %}
@@ -149,8 +151,8 @@
 	{% endif %}
 
 	{% javascripts filter="?jsqueeze" output="js/app.js"
-		'@AppBundle/Resources/public/js/bootstrap.min.js'
-		'@AppBundle/Resources/public/js/forerunnerdb.min.js'
+		'@AppBundle/Resources/public/js/bootstrap.js'
+		'@AppBundle/Resources/public/js/fdb-all.js'
 		'@AppBundle/Resources/public/js/app.data.js'
 		'@AppBundle/Resources/public/js/app.format.js'
 		'@AppBundle/Resources/public/js/app.tip.js'
