--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -210,7 +210,7 @@ div.tags span.tag:not(:first-child)::before {
 .tt-suggestion p{margin:0}
 
 /************** QTIP ****************/
-
+.qtip-thronesdb{border-radius:2px}
 .qtip-thronesdb-text{min-width:360px;max-width:360px;font-size:15px}
 .qtip-thronesdb-image{max-width:500px}
 
