--- a/src/AppBundle/Resources/views/Decklist/comments.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/comments.html.twig
@@ -9,9 +9,10 @@
         <a href="#div-comment-{{ comment.id }}" data-toggle="collapse" class="text-muted pull-right" style="margin-left:.5em"><span class="fa fa-eye"></span></a>
     </div>
     <div class="collapse{% if not comment.isHidden %} in{% endif %}" id="div-comment-{{ comment.id }}">
-        <span class="comment-date" title="{{ comment.dateCreation|date('r') }}">{{ comment.dateCreation|date('M d, Y') }}</span>
-        <a href="{{ path('user_profile_public', {user_id:comment.user.id,user_name:comment.user.username|e('url')}) }}" class="comment-author username {{ comment.user.color }}">{{ comment.user.username }}</a>
-        {% if comment.user.donation > 0 %}<span class="fa fa-gift donator" title="ThronesDB Gracious Donator"></span>{% endif %}
+    	<h4 class="comment-header">
+    		<span class="comment-date pull-right" title="{{ comment.dateCreation|date('r') }}">{{ comment.dateCreation|date('M d, Y') }}</span>
+        	<span class="comment-author">{{ macros.username(comment.user) }}</span>
+    	</h4>
         <div class="comment-text">{{ comment.text|raw }}</div>
     </div>
 </td></tr>
