--- a/src/AppBundle/Resources/views/Decklist/decklists.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/decklists.html.twig
@@ -1,4 +1,5 @@
 {% extends 'AppBundle::layout.html.twig' %}
+{% import "AppBundle::macros.html.twig" as macros %}
 
 {% block javascripts %}
 	{% javascripts '@AppBundle/Resources/public/js/ui.decklist_search.js' %}
@@ -72,12 +73,10 @@ $(function () {
 <td>
     <article>
 	<h4>
-		<small class="pull-right social">
-			<span class="fa fa-heart social-icon-like"></span> {{ decklist.nbVotes }}
-			<span class="fa fa-star social-icon-favorite"></span> {{ decklist.nbFavorites }}
-			<span class="fa fa-comment social-icon-comment"></span> {{ decklist.nbComments }}
+		<small class="pull-right">
+			{{ macros.decklist_social_icons(decklist) }}
 		</small>
-		<a class="decklist-name" href="{{ path('decklist_detail', { 'decklist_id': decklist.id, 'decklist_name': decklist.nameCanonical|e('url') }) }}">{{ decklist.name }} {{ decklist.version }}</a>
+		<a class="decklist-name" href="{{ path('decklist_detail', { 'decklist_id': decklist.id, 'decklist_name': decklist.nameCanonical|e('url') }) }}">{{ decklist.name }}</a>
 	</h4>
 	<h5>
 		<time class="pull-right" datetime="{{ decklist.dateCreation|date('c') }}">{{ decklist.dateCreation|date('M d') }}</time>
