--- a/src/AppBundle/Resources/views/macros.html.twig
+++ b/src/AppBundle/Resources/views/macros.html.twig
@@ -14,26 +14,13 @@
 </span>
 {% endmacro %}
 
-{% macro decklist_social_buttons(decklist) %}
-<span class="social">
-    <a id="social-icon-like" href="#" class="social-icon-like" data-toggle="tooltip" data-placement="bottom" title="Like">
-        <span class="fa fa-heart"></span> <span class="num">{{ decklist.nbVotes }}</span>
-    </a>
-    | <a id="social-icon-favorite" href="#" class="social-icon-favorite" data-toggle="tooltip" data-placement="bottom" title="Favorite">
-        <span class="fa fa-star"></span> <span class="num">{{ decklist.nbFavorites }}</span>
-    </a>
-    | <a id="social-icon-comment" href="#" class="social-icon-comment" data-toggle="tooltip" data-placement="bottom" title="Comment">
-        <span class="fa fa-comment"></span> <span class="num">{{ decklist.nbComments }}</span>
-    </a>
-</span>
-{% endmacro %}
-
 {% macro decklist_table_row(decklist) %}
 <tr>
-	<td class="decklist-name"><a href="{{ path('decklist_detail', { 'decklist_id': decklist.id, 'decklist_name': decklist.nameCanonical|e('url') }) }}">{{ decklist.name }} {{ decklist.version }}</a></td>
-	<td class="social"><span class="fa fa-heart social-icon-like"></span> {{ decklist.nbVotes }}</td>
-	<td class="social"><span class="fa fa-star social-icon-favorite"></span> {{ decklist.nbFavorites }}</td>
-	<td class="social"><span class="fa fa-comment social-icon-comment"></span> {{ decklist.nbComments }}</td>
+	<td class="decklist-name"><a href="{{ path('decklist_detail', { 'decklist_id': decklist.id, 'decklist_name': decklist.nameCanonical|e('url') }) }}">{{ decklist.name }}</a></td>
+	<td><span class="fa fa-heart social-icon-like"></span> {{ decklist.nbVotes }}</td>
+	<td><span class="fa fa-star social-icon-favorite"></span> {{ decklist.nbFavorites }}</td>
+	<td><span class="fa fa-comment social-icon-comment"></span> {{ decklist.nbComments }}</td>
+	<td><span class="fa fa-code-fork social-icon-version"></span> {{ decklist.version }}</td>
 </tr>
 {% endmacro %}
 
@@ -41,4 +28,21 @@
 <a href="{{ path('user_profile_public', {user_id:user.id,user_name:user.username|e('url')}) }}" class="username {{ user.color }}">{{ user.username }}</a>
 {% if user.donation > 0 %}<span class="fa fa-gift donator" title="ThronesDB Gracious Donator"></span>{% endif %}
 <small title="User Reputation">{{ user.reputation }}</small>
+{% endmacro %}
+
+{% macro decklist_social_icons(decklist) %}
+<span class="social-icons">
+	<a id="social-icon-like" href="#" class="social-icon-like" data-toggle="tooltip" data-placement="bottom" title="Like">
+		<span class="fa fa-heart"></span> <span class="num">{{ decklist.nbVotes }}</span>
+	</a>
+	<a id="social-icon-favorite" href="#" class="social-icon-favorite" data-toggle="tooltip" data-placement="bottom" title="Favorite">
+		<span class="fa fa-star"></span> <span class="num">{{ decklist.nbFavorites }}</span>
+	</a>
+	<a id="social-icon-comment" href="#comment-form" class="social-icon-comment" data-toggle="tooltip" data-placement="bottom" title="Comment">
+		<span class="fa fa-comment"></span> <span class="num">{{ decklist.nbComments }}</span>
+	</a>
+	<span class="social-icon-version" data-toggle="tooltip" data-placement="bottom" title="Version">
+		<span class="fa fa-code-fork"></span> <span class="num">{{ decklist.version }}</span>
+	</a>
+</span>
 {% endmacro %}
