include link to auto api doc , refresh api intro page

--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -95,7 +95,7 @@
 
     <ul class="list-inline">
     <li><a href="{{ path('about') }}">About</a></li>
-    <li><a href="{{ path('apidoc') }}">API</a></li>
+    <li><a href="{{ path('api_intro') }}">API</a></li>
     <li><a href="{{ path('donators') }}">Donators</a> <span class="fa fa-gift donator" title="The Gracious Donator"></span></li>
     </ul>
 
