fix user dropdown

--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -70,7 +70,7 @@
               </div>
             </li>
             <li id="login">
-                <a href="#" class="dropdown-toggle loginname" data-toggle="dropdown"><span class="fa fa-user"></span><b class="caret"></b></a>
+                <a href="#" class="disabled"><span class="fa fa-user"></span></a>
             </li>
           </ul>
           <form class="navbar-form navbar-right visible-lg-block visible-xs-block external" action="{{ path('cards_find') }}" target="_blank">
